# bills-calculator

./: .gitignore  CMakeLists.txt  README.md  bills.json
modules/backend/: CMakeLists.txt
modules/frontend/: CMakeLists.txt
modules/frontend/src/: bills_window.cpp  bills_window.hpp  bills_window.ui
src/: main.cpp
